--- a/bzip2-1.0.6/debian/rules
+++ b/bzip2-1.0.6/debian/rules
@@ -19,6 +19,8 @@ ifneq ($(DEB_HOST_GNU_TYPE),$(DEB_BUILD_GNU_TYPE))
         CROSS=CC=$(DEB_HOST_GNU_TYPE)-gcc
         CC=$(DEB_HOST_GNU_TYPE)-gcc
         DEBSTRIP=$(DEB_HOST_GNU_TYPE)-strip
+	AR=$(DEB_HOST_GNU_TYPE)-ar
+	RANLIB=$(DEB_HOST_GNU_TYPE)-ranlib
 else
         CROSS=CC=gcc
         CC=gcc
@@ -58,6 +60,8 @@ build: build-stamp $(build32-stamp) $(build64-stamp)
 build-stamp:
 	$(testdir)
 	# Add here commands to compile the package.
+	echo "CFLAGS=$(CFLAGS)"
+	echo "DEBCFLAGS=$(DEBCFLAGS)"
 	$(MAKE) $(CROSS) DEBCFLAGS="$(DEBCFLAGS)"
 ifeq ($(DEB_BUILD_GNU_TYPE),$(DEB_HOST_GNU_TYPE))
 	$(MAKE) DEBCFLAGS="$(DEBCFLAGS)" test
@@ -156,27 +160,28 @@ binary-arch: build
 
 	# Development package
 	install -d debian/tmp-dev/usr/lib/$(DEB_HOST_MULTIARCH)
+	install -d debian/tmp-dev/usr/include/$(DEB_HOST_MULTIARCH)
 	rm debian/tmp/lib/libbz2.so
-	ln -s /lib/$(DEB_HOST_MULTIARCH)/libbz2.so.1.0 debian/tmp-dev/usr/lib/$(DEB_HOST_MULTIARCH)/libbz2.so
-	mv debian/tmp/lib/libbz2.a debian/tmp-dev/usr/lib/$(DEB_HOST_MULTIARCH)/
-	mv debian/tmp/include debian/tmp-dev/usr/include
+	ln -s libbz2.so.1.0 debian/tmp-dev/usr/lib/$(DEB_HOST_MULTIARCH)/libbz2.so
+	mv debian/tmp/lib/*.a debian/tmp-dev/usr/lib/$(DEB_HOST_MULTIARCH)/
+	mv debian/tmp/include/* debian/tmp-dev/usr/include/$(DEB_HOST_MULTIARCH)/
 	
 
 	# Library package
-	install -d debian/tmp-lib/lib/$(DEB_HOST_MULTIARCH)
-	for i in $$(ls debian/tmp/lib/libbz2.so*); do \
-	  (set -x; echo $$i; mv $$i debian/tmp-lib/lib/$(DEB_HOST_MULTIARCH)/); \
+	install -d debian/tmp-lib/usr/lib/$(DEB_HOST_MULTIARCH)
+	for i in $$(ls debian/tmp/lib/libbz2.{so,dll}*); do \
+	  (set -x; echo $$i; mv $$i debian/tmp-lib/usr/lib/$(DEB_HOST_MULTIARCH)/); \
 	done
-	ln -s libbz2.so.1.0.4 debian/tmp-lib/lib/$(DEB_HOST_MULTIARCH)/libbz2.so.1
-	chmod -x debian/tmp-lib/lib/$(DEB_HOST_MULTIARCH)/*
+	ln -s libbz2.so.1.0.4 debian/tmp-lib/usr/lib/$(DEB_HOST_MULTIARCH)/libbz2.so.1
+	chmod -x debian/tmp-lib/usr/lib/$(DEB_HOST_MULTIARCH)/*
 
 	# Binary package
-	install -d debian/tmp-run
-	mv debian/tmp/bin debian/tmp-run/bin
-	ln -sf bzdiff debian/tmp-run/bin/bzcmp
-	ln -sf bzgrep debian/tmp-run/bin/bzegrep
-	ln -sf bzgrep debian/tmp-run/bin/bzfgrep
-	ln -sf bzmore debian/tmp-run/bin/bzless
+	install -d debian/tmp-run/usr/lib/$(DEB_HOST_MULTIARCH)
+	mv debian/tmp/bin/* debian/tmp-run/usr/lib/$(DEB_HOST_MULTIARCH)/
+	ln -sf bzdiff debian/tmp-run/usr/lib/$(DEB_HOST_MULTIARCH)/bzcmp
+	ln -sf bzgrep debian/tmp-run/usr/lib/$(DEB_HOST_MULTIARCH)/bzegrep
+	ln -sf bzgrep debian/tmp-run/usr/lib/$(DEB_HOST_MULTIARCH)/bzfgrep
+	ln -sf bzmore debian/tmp-run/usr/lib/$(DEB_HOST_MULTIARCH)/bzless
 	install -d debian/tmp-run/usr/share
 	mv debian/tmp/man debian/tmp-run/usr/share/man
 
@@ -224,18 +229,18 @@ binary-arch: build
 	  fi; \
 	done
 	$(DEBSTRIP) --strip-unneeded -R .note -R .comment \
-	  debian/tmp-lib/lib/$(DEB_HOST_MULTIARCH)/*.so*
+	  debian/tmp-lib/usr/lib/$(DEB_HOST_MULTIARCH)/*.so*
 	$(DEBSTRIP) --strip-debug debian/tmp-dev/usr/lib/$(DEB_HOST_MULTIARCH)/*.a
 
 	# Control files
 	install -d debian/tmp-{lib,dev,run}/DEBIAN
 	cp debian/shlibs debian/tmp-lib/DEBIAN/shlibs
 
-	dpkg-shlibdeps debian/tmp-lib/lib/$(DEB_HOST_MULTIARCH)/*.so*
+	dpkg-shlibdeps debian/tmp-lib/usr/lib/$(DEB_HOST_MULTIARCH)/*.{so,dll}*
 	dpkg-gencontrol -isp -Pdebian/tmp-lib -plibbz2-1.0
 	rm debian/substvars
 	dpkg-gencontrol -isp -Pdebian/tmp-dev -plibbz2-dev
-	dpkg-shlibdeps debian/tmp-run/bin/*
+	dpkg-shlibdeps debian/tmp-run/usr/lib/$(DEB_HOST_MULTIARCH)/*
 	dpkg-gencontrol -isp -Pdebian/tmp-run -pbzip2
 
 	for i in run dev lib; do \
