--- a/icu-57.1/source/data/icupkg.inc.in
+++ b/icu-57.1/source/data/icupkg.inc.in
@@ -50,8 +50,8 @@ U_IS_BIG_ENDIAN=@U_IS_BIG_ENDIAN@
 
 ##### Add the following to source/config/Makefile.in
 
-GENCCODE=$(BINDIR)/genccode
-GENCMN=$(BINDIR)/gencmn
-ICUPKG=$(BINDIR)/icupkg
+GENCCODE=$(BINDIR)/genccode$(EXEEXT)
+GENCMN=$(BINDIR)/gencmn$(EXEEXT)
+ICUPKG=$(BINDIR)/icupkg$(EXEEXT)
 
 
