--- a/icu-57.1/source/extra/uconv/pkgdata.inc.in
+++ b/icu-57.1/source/extra/uconv/pkgdata.inc.in
@@ -55,8 +55,8 @@ platform=@platform@
 
 ##### Add the following to source/config/Makefile.in
 
-GENCCODE=$(BINDIR)/genccode
-GENCMN=$(BINDIR)/gencmn
-ICUPKG=$(BINDIR)/icupkg
+GENCCODE=$(BINDIR)/genccode$(EXEEXT)
+GENCMN=$(BINDIR)/gencmn$(EXEEXT)
+ICUPKG=$(BINDIR)/icupkg$(EXEEXT)
 
 
