--- a/icu-57.1/source/test/testdata/pkgdata.inc.in
+++ b/icu-57.1/source/test/testdata/pkgdata.inc.in
@@ -15,6 +15,6 @@ include $(top_builddir)/icudefs.mk
 
 ##### Add the following to source/config/Makefile.in
 
-GENCCODE=$(BINDIR)/genccode
-ICUPKG=$(BINDIR)/icupkg
+GENCCODE=$(BINDIR)/genccode$(EXEEXT)
+ICUPKG=$(BINDIR)/icupkg$(EXEEXT)
 
