--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,17 @@
 build-i686-w64-mingw32
 build-x86_64-w64-mingw32
 */debian/tmp
-icu-*/debian/*icu*-mingw*/*
 */debian/*.log
 */debian/*.substvars
+*/debian/.debhelper
+*/debian/files
+*/debian/*build-stamp
+*.o
+*.a
+*.exe
+*.ex
+*.EX
+*.dll
+*.so
+icu-*/debian/*icu*-mingw*/*
+mingw-buildscripts*/debian/mingw-buildscripts*/*
