--- a/bzip2-1.0.6/debian/control
+++ b/bzip2-1.0.6/debian/control
@@ -3,13 +3,14 @@ Section: utils
 Priority: important
 Maintainer: Anibal Monsalve Salazar <anibal@debian.org>
 Uploaders: Santiago Ruano Rincón <santiago@debian.org>, Jorge Ernesto Guevara Cuenca <jguevara@debiancolombia.org>
-Standards-Version: 3.9.4
-Build-depends: texinfo, gcc-multilib [amd64 i386 kfreebsd-amd64 powerpc ppc64 s390 sparc] | gcc-4.1 (<< 4.1.2) [amd64 i386 kfreebsd-amd64 powerpc ppc64 s390 sparc], dpkg-dev (>= 1.16.0)
+Standards-Version: 3.9.8
+Build-depends: debhelper (>> 9~), dpkg-dev (>= 1.16.1~), autotools-dev, texinfo, gcc-multilib [amd64 i386 kfreebsd-amd64 powerpc ppc64 s390 sparc] | gcc-4.1 (<< 4.1.2) [amd64 i386 kfreebsd-amd64 powerpc ppc64 s390 sparc], dpkg-dev, docbook2x
+Build-Depends-Indep: gcc-mingw-w64, g++-mingw-w64 (>= 1.7.1)
 Homepage: http://www.bzip.org/
 Vcs-Git: git://git.debian.org/collab-maint/bzip2.git
 Vcs-Browser: http://git.debian.org/?p=collab-maint/bzip2.git
 
-Package: libbz2-1.0
+Package: libbz2-mingw-w64-1.0
 Priority: important
 Section: libs
 Multi-Arch: same
@@ -33,13 +34,13 @@ Description: high-quality block-sorting file compressor library - runtime
  The archive file format of bzip2 (.bz2) is incompatible with that of its
  predecessor, bzip (.bz).
 
-Package: libbz2-dev
+Package: libbz2-mingw-w64-dev
 Priority: optional
 Section: libdevel
 Multi-Arch: same
 Architecture: any
-Depends: libbz2-1.0 (=${binary:Version}), libc6-dev | libc-dev
-Replaces: bzip2 (<<0.9.5d-3)
+Depends: libbz2-mingw-w64-1.0 (=${binary:Version}), libc6-dev | libc-dev
+Replaces: bzip2-mingw-w64 (<<0.9.5d-3)
 Description: high-quality block-sorting file compressor library - development
  Static libraries and include files for the bzip2 compressor library.
  .
@@ -57,14 +58,14 @@ Description: high-quality block-sorting file compressor library - development
  The archive file format of bzip2 (.bz2) is incompatible with that of its
  predecessor, bzip (.bz).
 
-Package: bzip2
+Package: bzip2-mingw-w64
 Priority: standard
 Section: utils
 Architecture: any
 Multi-Arch: foreign
-Depends: libbz2-1.0 (=${binary:Version}), ${shlibs:Depends}
-Suggests: bzip2-doc
-Replaces: libbz2 (<<0.9.5d-3)
+Depends: libbz2-mingw-w64-1.0 (=${binary:Version}), ${shlibs:Depends}
+Suggests: bzip2-mingw-w64-doc
+Replaces: libbz2-mingw-w64 (<<0.9.5d-3)
 Description: high-quality block-sorting file compressor - utilities
  bzip2 is a freely available, patent free, high-quality data compressor. 
  It typically compresses files to within 10% to 15% of the best available
@@ -80,44 +81,7 @@ Description: high-quality block-sorting file compressor - utilities
  The archive file format of bzip2 (.bz2) is incompatible with that of its
  predecessor, bzip (.bz).
 
-Package: lib64bz2-1.0
-Priority: optional
-Section: libs
-Architecture: i386 powerpc sparc s390
-Depends: ${shlibs:Depends}, ${misc:Depends}
-Replaces: amd64-libs (<< 1.5)
-Description: high-quality block-sorting file compressor library - 64bit runtime
- This package contains the libbzip2 64bit runtime library.
-
-Package: lib64bz2-dev
-Priority: optional
-Section: libdevel
-Replaces: amd64-libs-dev (<< 1.5)
-Architecture: i386 powerpc sparc s390
-Depends: lib64bz2-1.0 (=${binary:Version}), libbz2-dev (=${binary:Version}), ${dev:Depends}
-Description: high-quality block-sorting file compressor library - 64bit development
- Static libraries and include files for the bzip2 compressor library (64bit).
-
-Package: lib32bz2-1.0
-Priority: optional
-Section: libs
-Architecture: amd64 ppc64
-Pre-Depends: libc6-i386 (>= 2.9-18) [amd64]
-Depends: ${shlibs:Depends}, ${misc:Depends}
-Replaces: ia32-libs
-Description: high-quality block-sorting file compressor library - 32bit runtime
- This package contains the libbzip2 32bit runtime library.
-
-Package: lib32bz2-dev
-Priority: optional
-Section: libdevel
-Architecture: amd64 ppc64
-Depends: lib32bz2-1.0 (=${binary:Version}), libbz2-dev (=${binary:Version}), ${dev:Depends}
-Replaces: ia32-libs-dev
-Description: high-quality block-sorting file compressor library - 32bit development
- Static libraries and include files for the bzip2 compressor library (32bit).
-
-Package: bzip2-doc
+Package: bzip2-mingw-w64-doc
 Priority: optional
 Section: doc
 Architecture: all
