--- a/bzip2-1.0.6/debian/copyright.in
+++ b/bzip2-1.0.6/debian/copyright.in
@@ -1,18 +1,40 @@
-This package (bzip2) was created by Philippe Troin <phil@fifi.org>.
-It is currently mantained by Anibal Monsalve Salazar <anibal@debian.org>.
-This package is Copyright (C) 1999, 2000, 2001, 2002 Philippe Troin
-<phil@fifi.org> and Copyright (C) 2004-2007 Anibal Monsalve Salazar.
-It is licensed under the GNU General Public License which can be
-found in /usr/share/common-licenses/GPL.
+Format: http://www.debian.org/doc/packaging-manuals/copyright-format/1.0/
+Upstream-Name: bzip2
+Upstream-Contact: Julian Seward <jseward@acm.org>
+Source: http://www.bzip.org/downloads.html
 
-It was downloaded from
-    http://www.bzip.org/downloads.html
+Files: *
+Copyright: 1996-2010 Julian R Seward
+License: BZIP2
 
-For more information about bzip2, please visit:
-    http://www.bzip.org/
+Files: debian/patches/01-cygming-bzip2-1.0.6.src.patch
+Copyright: 2010 Keith Marshall <keithmarshall@users.sourceforge.net>
+License: BZIP2
 
-Author:
-    Julian Seward <jseward@acm.org>
+Files: debian/*
+Copyright: 1999, 2000, 2001, 2002 Philippe Troin <phil@fifi.org>
+           2004-2007 Anibal Monsalve Salazar
+	   2016 Tobias Schlemmer <keinstein@users.sourceforge.net>
+License: GPL-2+
+ This program is free software; you can redistribute it
+ and/or modify it under the terms of the GNU General Public
+ License as published by the Free Software Foundation; either
+ version 2 of the License, or (at your option) any later
+ version.
+ .
+ This program is distributed in the hope that it will be
+ useful, but WITHOUT ANY WARRANTY; without even the implied
+ warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR
+ PURPOSE.  See the GNU General Public License for more
+ details.
+ .
+ You should have received a copy of the GNU General Public
+ License along with this package; if not, write to the Free
+ Software Foundation, Inc., 51 Franklin St, Fifth Floor,
+ Boston, MA  02110-1301 USA
+ .
+ On Debian systems, the full text of the GNU General Public
+ License version 2 can be found in the file
+ `/usr/share/common-licenses/GPL-2'.
 
-Copyright:  (from LICENSE)
-
+License: BZIP2
