--- a/zlib-1.2.8.dfsg/.pc/add-.exe-to-executables/win32/Makefile.gcc
+++ b/zlib-1.2.8.dfsg/.pc/add-.exe-to-executables/win32/Makefile.gcc
@@ -74,12 +74,12 @@ OBJA =
 all: $(STATICLIB) $(SHAREDLIB) $(IMPLIB) example.exe minigzip.exe example_d.exe minigzip_d.exe
 
 test: example.exe minigzip.exe
-	./example.exe
-	echo hello world | ./minigzip.exe | ./minigzip.exe -d
+	./example
+	echo hello world | ./minigzip | ./minigzip -d
 
 testdll: example_d.exe minigzip_d.exe
-	./example_d.exe
-	echo hello world | ./minigzip_d.exe | ./minigzip_d.exe -d
+	./example_d
+	echo hello world | ./minigzip_d | ./minigzip_d -d
 
 .c.o:
 	$(CC) $(CFLAGS) -c -o $@ $<
