--- a/zlib-1.2.8.dfsg/debian/control
+++ b/zlib-1.2.8.dfsg/debian/control
@@ -6,7 +6,7 @@ Standards-Version: 3.9.4
 Homepage: http://zlib.net/
 Build-Depends: debhelper (>= 8.1.3~), binutils (>= 2.18.1~cvs20080103-2) [mips mipsel], gcc-multilib [amd64 i386 kfreebsd-amd64 mips mipsel powerpc ppc64 s390 sparc s390x], dpkg-dev (>= 1.16.1)
 
-Package: zlib1g
+Package: zlib1g-mingw-w64
 Architecture: any
 Multi-Arch: same
 Depends: ${shlibs:Depends}, ${misc:Depends}
@@ -19,11 +19,11 @@ Description: compression library - runtime
  zlib is a library implementing the deflate compression method found
  in gzip and PKZIP.  This package includes the shared library.
 
-Package: zlib1g-dev
+Package: zlib1g-mingw-w64-dev
 Section: libdevel
 Architecture: any
 Multi-Arch: same
-Depends: zlib1g (= ${binary:Version}), libc6-dev | libc-dev, ${misc:Depends}
+Depends: zlib1g-mingw-w64 (= ${binary:Version}), libc6-dev | libc-dev, ${misc:Depends}
 Conflicts: zlib1-dev
 Provides: libz-dev
 Description: compression library - development
@@ -31,18 +31,18 @@ Description: compression library - development
  in gzip and PKZIP.  This package includes the development support
  files.
 
-Package: zlib1g-dbg
+Package: zlib1g-mingw-w64-dbg
 Section: debug
 Priority: extra
 Architecture: any
-Depends: zlib1g (= ${binary:Version})
+Depends: zlib1g-mingw-w64 (= ${binary:Version})
 Provides: libz-dbg
 Description: compression library - development
  zlib is a library implementing the deflate compression method found
  in gzip and PKZIP.  This package includes debugging symbols for use
  when debugging applications which use zlib.
 
-Package: zlib1g-udeb
+Package: zlib1g-mingw-w64-udeb
 XC-Package-Type: udeb
 Architecture: any
 Priority: optional
@@ -52,7 +52,7 @@ Description: compression library - runtime for Debian installer
  in gzip and PKZIP.  This minimal package includes the shared library
  for use with the Debian installer.
 
-Package: lib64z1
+Package: lib64z1-mingw-w64
 Architecture: sparc s390 i386 powerpc mips mipsel
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Replaces: amd64-libs (<< 1.4)
@@ -61,10 +61,10 @@ Description: compression library - 64 bit runtime
  in gzip and PKZIP.  This package includes a 64 bit version of the
  shared library.
 
-Package: lib64z1-dev
+Package: lib64z1-mingw-w64-dev
 Section: libdevel
 Architecture: sparc s390 i386 powerpc mips mipsel
-Depends: lib64z1 (= ${binary:Version}), zlib1g-dev (= ${binary:Version}), lib64c-dev, ${misc:Depends}
+Depends: lib64z1-mingw-w64 (= ${binary:Version}), zlib1g-mingw-w64-dev (= ${binary:Version}), lib64c-dev, ${misc:Depends}
 Replaces: amd64-libs-dev (<< 1.4)
 Provides: lib64z-dev
 Description: compression library - 64 bit development
@@ -72,7 +72,7 @@ Description: compression library - 64 bit development
  in gzip and PKZIP.  This package includes the development support
  files for building 64 bit applications.
 
-Package: lib32z1
+Package: lib32z1-mingw-w64
 Architecture: amd64 ppc64 kfreebsd-amd64 s390x
 Conflicts: libc6-i386 (<= 2.9-18)
 Depends: ${shlibs:Depends}, ${misc:Depends}
@@ -82,11 +82,11 @@ Description: compression library - 32 bit runtime
  in gzip and PKZIP.  This package includes a 32 bit version of the
  shared library.
 
-Package: lib32z1-dev
+Package: lib32z1-mingw-w64-dev
 Section: libdevel
 Architecture: amd64 ppc64 kfreebsd-amd64 s390x
 Conflicts: libc6-i386 (<= 2.9-18)
-Depends: lib32z1 (= ${binary:Version}), zlib1g-dev (= ${binary:Version}), lib32c-dev, ${misc:Depends}
+Depends: lib32z1-mingw-w64 (= ${binary:Version}), zlib1g-mingw-w64-dev (= ${binary:Version}), lib32c-dev, ${misc:Depends}
 Provides: lib32z-dev
 Replaces: ia32-libs-dev (<< 1.5)
 Description: compression library - 32 bit development
@@ -94,7 +94,7 @@ Description: compression library - 32 bit development
  in gzip and PKZIP.  This package includes the development support
  files for building 32 bit applications.
 
-Package: libn32z1
+Package: libn32z1-mingw-w64
 Architecture: mips mipsel
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: compression library - n32 runtime
@@ -102,10 +102,10 @@ Description: compression library - n32 runtime
  in gzip and PKZIP.  This package includes a n32 version of the shared
  library.
 
-Package: libn32z1-dev
+Package: libn32z1-mingw-w64-dev
 Section: libdevel
 Architecture: mips mipsel
-Depends: libn32z1 (= ${binary:Version}), zlib1g-dev (= ${binary:Version}), libn32c-dev, ${misc:Depends}
+Depends: libn32z1-mingw-w64 (= ${binary:Version}), zlib1g-mingw-w64-dev (= ${binary:Version}), libn32c-dev, ${misc:Depends}
 Provides: libn32z-dev
 Description: compression library - n32 development
  zlib is a library implementing the deflate compression method found
